Add jQuery and Ajax to Show page to allow adding of reviews

--- a/README.rdoc
+++ b/README.rdoc
@@ -5,7 +5,9 @@ application up and running.
 
 Things you may want to cover:
 
-* Ruby version
+* Ruby version: Ruby 2.0.0p643 (2015-02-25 revision 49749) [x86_64-darwin14.1.0]
+
+* Rails version: Rails 4.1.9
 
 * System dependencies
 
@@ -20,8 +22,6 @@ Things you may want to cover:
 * Services (job queues, cache servers, search engines, etc.)
 
 * Deployment instructions
-
-* ...
 
 
 Please feel free to use a different markup language if you do not plan to run
